--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
     <section id="app"></section>
     <script type="module">
-        import init from '/pkg/package.js';
-        init('/pkg/package_bg.wasm');
+        import init from '/pkg/package.js'; init('/pkg/package_bg.wasm');
     </script>
 </body>
 
